# Angle_Foundry

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  logger.py  scheduler.py  single_instance.py
app/generator/: __init__.py  ai_client.py  parser.py  prompt_builder.py  validator.py
app/history/: topic_history.py
app/messaging/: feishu_notifier.py  formatter.py  wecom_notifier.py
app/models/: __init__.py  app_config.py  push_message.py  topic_request.py  topic_result.py
app/tasks/: daily_topic_task.py
config/: config.toml
docs/: manual-verification.md
scripts/: common.ps1  register_startup_task.bat  register_startup_task.ps1  run_once.bat  run_once.ps1  show_startup_task.bat  show_startup_task.ps1  smoke_real_delivery.py  start_scheduler.bat  start_scheduler.ps1  unregister_startup_task.bat  unregister_startup_task.ps1
tests/: test_ai_client.py  test_config.py  test_daily_topic_task.py  test_feishu_notifier.py  test_formatter.py  test_parser.py  test_prompt_builder.py  test_runtime_shell.py  test_single_instance.py  test_topic_history.py  test_validator.py
